# rust_actix_diesel_connect

./: .env.example  Cargo.toml  Procfile  README.md
src/: controllers.rs  main.rs  models.rs  postgres.rs  schema.rs
